--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -50,6 +50,23 @@ body{
   filter: brightness(30%); 
 }
 
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: spin 1s infinite linear; /* Define the animation */
+}
+
+@keyframes spin {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg); /* Initial rotation */
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg); /* Full rotation */
+  }
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
